Avoid unexpected whitespace under fix button in highlighter modal

--- a/src/frontendHighlighterApp/sass/app.scss
+++ b/src/frontendHighlighterApp/sass/app.scss
@@ -430,6 +430,7 @@ body {
 	}
 
 	&--action-open {
-		display: block;
+		display: inline-block;
+		width: 100%;
 	}
 }
